# dify-azure

./: .gitignore  CLAUDE.md
.github/workflows/: evals.yml
evals/: .env.example  README.md  pyproject.toml
evals/dataset/: ground_truth.json
evals/docs/: online-evaluation.md
evals/quote_eval/: __init__.py  config.py  dify_client.py  judge.py  langfuse_logger.py  metrics.py  normalize.py  run_eval.py
evals/tests/: test_metrics.py
infra/: .env.example  README.md  cloud-init.yaml  main.bicep  main.bicepparam  resources.bicep
infra/modules/: keyvault.bicep  network.bicep  openai.bicep  vm.bicep
